@startuml DiagramaClassesRIIFBA

!theme plain
skinparam classAttributeIconSize 0
skinparam classFontStyle bold
skinparam classBackgroundColor #FFFFC0
skinparam classBorderColor #666666
skinparam arrowColor #333333
skinparam stereotypeCBackgroundColor #E8E8E8

' ============================================================================
' ENUMERAÇÕES
' ============================================================================

enum PerfilUsuario {
    ESTUDANTE
    ADMIN
}

enum TurnoRefeicao {
    ALMOCO
    JANTAR
}

enum StatusPresenca {
    CONFIRMADO
    VALIDADO
    PRESENTE
    FALTA_JUSTIFICADA
    FALTA_INJUSTIFICADA
    CANCELADO
}

enum TipoJustificativa {
    ANTECIPADA
    POSTERIOR
}

enum StatusJustificativa {
    PENDENTE
    APROVADA
    REJEITADA
}

enum StatusFila {
    INSCRITO
    APROVADO
    REJEITADO
}

' ============================================================================
' ENTIDADES PRINCIPAIS
' ============================================================================

class User {
    - Long id
    - String matricula
    - String nome
    - String email
    - String senha
    - PerfilUsuario perfil
    - Boolean bolsista
    - Integer limiteFaltasMes
    - Boolean desligado
    - DateTime desligadoEm
    - String desligadoMotivo
    - String curso
    - String turno
    - String preferenciaAlimentar
    - String fotoPerfil
    - DateTime criadoEm
    - DateTime atualizadoEm
    --
    + cadastrar()
    + autenticar()
    + atualizarPerfil()
    + desligar()
    + reativar()
    + verificarLimiteFaltas()
}

class Cardapio {
    - Long id
    - Date dataDoCardapio
    - String pratoPrincipalPtn01
    - String pratoPrincipalPtn02
    - String guarnicao
    - String acompanhamento01
    - String acompanhamento02
    - String salada
    - String ovoLactoVegetariano
    - String suco
    - String sobremesa
    - Long criadoPor
    - DateTime criadoEm
    - DateTime atualizadoEm
    --
    + cadastrar()
    + atualizar()
    + visualizarCompleto()
    + visualizarResumido()
    + importarPlanilha()
}

class Refeicao {
    - Long id
    - Long cardapioId
    - Date data
    - TurnoRefeicao turno
    - Integer capacidade
    - DateTime criadoEm
    - DateTime atualizadoEm
    --
    + criar()
    + atualizarCapacidade()
    + calcularVagasDisponiveis()
    + listarPresencas()
    + verificarDisponibilidade()
}

class Presenca {
    - Long id
    - Long userId
    - Long refeicaoId
    - StatusPresenca status
    - DateTime validadoEm
    - Long validadoPor
    - DateTime registradoEm
    --
    + registrar()
    + confirmar()
    + validar()
    + marcarFalta()
    + cancelar()
}

class Justificativa {
    - Long id
    - Long userId
    - Long refeicaoId
    - TipoJustificativa tipo
    - String motivo
    - String anexo
    - StatusJustificativa status
    - Long avaliadoPor
    - DateTime avaliadoEm
    - String motivoRejeicao
    - DateTime enviadoEm
    --
    + enviar()
    + anexarDocumento()
    + visualizar()
    + aprovar()
    + rejeitar()
}

class FilaExtra {
    - Long id
    - Long userId
    - Long refeicaoId
    - StatusFila status
    - DateTime inscritoEm
    --
    + inscrever()
    + calcularPosicao()
    + aprovar()
    + rejeitar()
    + cancelar()
    + notificar()
}

class UsuarioDiaSemana {
    - Long userId
    - Integer diaSemana
    --
    + adicionar()
    + remover()
    + listar()
    + validarDia()
}

class Bolsista {
    - Long id
    - String matricula
    - String nome
    - String curso
    - String turno
    - JSON diasSemana
    - Boolean ativo
    - Long userId
    - DateTime vinculadoEm
    --
    + importar()
    + vincularUsuario()
    + desativar()
    + reativar()
}

' ============================================================================
' SERVICES
' ============================================================================

class DashboardService <<service>> #FFFFFF {
    + calcularTaxaPresenca()
    + contarFaltasJustificadas()
    + contarFaltasInjustificadas()
    + contarExtrasAtendidos()
    + gerarEstatisticas()
}

class RelatorioService <<service>> #FFFFFF {
    + gerarRelatorioPresencas()
    + gerarRelatorioFaltas()
    + gerarRelatorioExtras()
    + exportarCSV()
    + exportarPDF()
}

class ImagemPerfilService <<service>> #FFFFFF {
    + processarEsalvar()
    + remover()
    + redimensionar()
}

class NotificacaoService <<service>> #FFFFFF {
    + notificar()
    + naoLidas()
    + marcarComoLida()
}

class PresencaService <<service>> #FFFFFF {
    + confirmar()
    + validar()
    + validarPorQrCode()
    + marcarFalta()
}

' ============================================================================
' RELACIONAMENTOS
' ============================================================================

' User relationships
User "1" --> "*" Presenca : possui
User "1" --> "*" Justificativa : envia
User "1" --> "*" FilaExtra : inscreve
User "1" *-- "*" UsuarioDiaSemana : selecionado por
User "1" --> "*" Cardapio : criado por
User "1" --> "*" Presenca : valida

' Cardapio relationships
Cardapio "1" *-- "*" Refeicao : possui

' Refeicao relationships
Refeicao "1" --> "*" Presenca : registra
Refeicao "1" --> "*" Justificativa : relacionada a
Refeicao "1" --> "*" FilaExtra : possui

' Bolsista relationship
Bolsista "1" --> "0..1" User : vincula

' Enum usage
User --> PerfilUsuario : usa
Refeicao --> TurnoRefeicao : ocorre em
Presenca --> StatusPresenca : status
Justificativa --> TipoJustificativa : tipo
Justificativa --> StatusJustificativa : status
FilaExtra --> StatusFila : status

' Service dependencies
DashboardService ..> Presenca : usa
RelatorioService ..> Presenca : usa
ImagemPerfilService ..> User : usa
PresencaService ..> Presenca : usa
PresencaService ..> User : usa

@enduml
